v7 - fixed controls overflow, changes to scale with height again but overflow on the grid is hidden

--- a/styles.css
+++ b/styles.css
@@ -127,12 +127,13 @@
 
     display: grid;
     grid-template-columns: auto auto auto;
-    justify-content: center;
     background-color: red;
+    justify-content: center;
+    overflow: hidden;
   }
 
   .btn-grid button {
-    width: 100%;
+    height: 100%;
     aspect-ratio: 1;
     background-color: white;
     columns: 1;
